tests/errors/field.b
S :: struct { x int }

fn main() {
    s := S{x: "hello"};
}
